--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "author": "",
   "license": "Not defined",
-  "devDependencies": {},
+  "devDependencies": {
+	"@dcl/eslint-config": "^1.0.1"
+  },
   "dependencies": {
     "decentraland-ecs": "latest"
   }
