--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "dcl-project",
   "version": "1.0.0",
   "description": "My new Decentraland project",
-  "scripts": {
+   "scripts": {
     "start": "dcl start",
     "build": "build-ecs",
     "watch": "build-ecs --watch",
+    "ecs:install": "npm install --save-dev decentraland-ecs@latest",
     "ecs:install-next": "npm install --save-dev decentraland-ecs@next",
-    "ecs:install-stable": "npm install --save-dev decentraland-ecs@latest"
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "author": "",
   "license": "Not defined",
